// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`buildInitialCode builds a script for a workflow 1`] = `
"const { launch } = require(\\"qawolf\\");
const selectors = require(\\"../selectors/login\\");

const login = async () => {
  const browser = await launch({ url: \\"http://localhost\\" });
  // 🐺 CREATE CODE HERE
  await browser.close();
};

login();"
`;

exports[`buildInitialCode builds a script for a workflow 2`] = `
"const { launch } = require(\\"qawolf\\");
const selectors = require(\\"../selectors/login\\");

const login = async () => {
  const browser = await launch({ device: \\"iPhone 7\\", url: \\"http://localhost\\" });
  // 🐺 CREATE CODE HERE
  await browser.close();
};

login();"
`;

exports[`buildInitialCode builds a test for a workflow 1`] = `
"const { launch } = require(\\"qawolf\\");
const selectors = require(\\"../selectors/login\\");

describe('login', () => {
  let browser;

  beforeAll(async () => {
    browser = await launch({ url: \\"http://localhost\\" });
  });

  afterAll(() => browser.close());

  // 🐺 CREATE CODE HERE
});"
`;

exports[`buildInitialCode builds a test for a workflow 2`] = `
"const { launch } = require(\\"qawolf\\");
const selectors = require(\\"../selectors/login\\");

describe('login', () => {
  let browser;

  beforeAll(async () => {
    browser = await launch({ device: \\"iPhone 7\\", url: \\"http://localhost\\" });
  });

  afterAll(() => browser.close());

  // 🐺 CREATE CODE HERE
});"
`;
